# moleculerpy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  README.ru.md  SECURITY.md  codecov.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: pre-code-check.sh  version-sync-check.sh
.github/workflows/: ci.yml  publish.yaml
docs/: CODE_REVIEW_2026.md  PERFORMANCE.md  PIPELINE.md  PRD-011-service-versioning.md  QUICKSTART.md  SPRINT-GUIDE.md  TODO.md
examples/: README.md  broadcast.py  error_handling.py  middlewares_showcase.py  ml_service.py  nats_smoke_demo.py  resilience_middleware_demo.py  run.sh  usage_sample.py  validation_example.py
examples/cluster/: README.md  __init__.py  client_alpha.py  colored_logger.py  server_beta.py  server_gamma.py
examples/demo_app/: README.md  __init__.py  bootstrap.py  broker_config.py  client.py  common.py  repl_console.py  server.py  smoke_run.py
examples/demo_app/services/: __init__.py  analytics_service.py  catalog_service.py  gateway_service.py  notifications_service.py  orders_service.py  payments_service.py
moleculerpy/: __init__.py  broker.py  cli.py  context.py  decorators.py  discoverer.py  domain_types.py  errors.py  health.py  internals.py  latency.py  lifecycle.py  local_bus.py  lock.py  logger.py  metrics.py  middleware.py  mixin.py  node.py  packet.py  protocols.py  registry.py  service.py  settings.py  stream.py  tracing.py  transit.py  validator.py
moleculerpy/cacher/: __init__.py  base.py  memory.py  memory_lru.py  redis.py
moleculerpy/metric_reporters/: __init__.py  console.py  prometheus.py  registry.py  reporter.py
moleculerpy/middleware/: __init__.py  action_hook.py  action_logger.py  base.py  bulkhead.py  caching.py  circuit_breaker.py  compression.py  context_tracker.py  debounce.py  encryption.py  error_handler.py  fallback.py  handler.py  hot_reload.py  metrics.py  retry.py  throttle.py  timeout.py  tracing.py  transit_logger.py  validator.py
moleculerpy/middlewares/: __init__.py  action_logger.py
moleculerpy/serializers/: __init__.py  base.py  json.py  msgpack.py
moleculerpy/strategy/: __init__.py  base.py  cpu_usage.py  latency.py  random.py  round_robin.py  shard.py
moleculerpy/transporter/: __init__.py  amqp.py  base.py  kafka.py  memory.py  mqtt.py  nats.py  redis.py
moleculerpy/validators/: __init__.py  base.py  default.py  resolve.py
scripts/: release_smoke.py
tests/e2e/: __init__.py  conftest.py  test_broker_gaps.py  test_events.py  test_load_balancing.py  test_lru_cacher.py  test_metrics_reporters.py  test_resilience_middleware.py  test_service_discovery.py  test_service_versioning.py  test_tracing_exporters.py  test_validators.py
tests/integration/: docker-compose.yaml  run_integration_tests.py  test_amqp_demo.py  test_basic_communication.py  test_events.py  test_kafka_demo.py  test_mqtt_demo.py  test_mqtt_transporter.py  test_service_discovery.py  test_versioned_nats.py
tests/integration/node_services/: channels_interop.js  package.json
tests/services/: README.md  api_gateway_service.py  client.py  greeter_service.py  math_service.py  monitor_service.py  user_service.py  validation_service.py
tests/stress/: test_extreme_load.py
tests/unit/: action_hook_test.py  action_logger_test.py  balanced_test.py  broker_cacher_test.py  broker_gaps_test.py  broker_nested_calls_test.py  broker_test.py  bulkhead_test.py  cacher_test.py  caching_middleware_test.py  compression_middleware_test.py  conftest.py  context_level_test.py  context_test.py  context_tracing_test.py  context_tracker_test.py  debounce_middleware_test.py  decorators_test.py  discoverer_test.py  domain_types_test.py  encryption_middleware_test.py  error_handler_test.py  errors_test.py  event_ack_test.py  fallback_test.py  handler_wrapping_test.py  hot_reload_test.py  internal_events_test.py  latency_test.py  lifecycle_test.py  local_bus_test.py  lock_test.py  logger_test.py  memory_lru_cacher_test.py  metric_reporters_test.py  metrics_middleware_test.py  metrics_test.py  middleware_circuit_breaker_test.py  middleware_metrics_test.py  middleware_retry_test.py  (+33 more)
